@@ -296,12 +296,13 @@ GradeP2Y=118
 
 [MusicWheel]
 FadeSeconds=1
-SwitchSeconds=0.1
+SwitchSeconds=0.10
 SampleMusicDelay=0.2
 RouletteSwitchSeconds=0.05
 RouletteSlowDownSwitches=5
 LockedInitialVelocity=7
-ScrollBarX=150
+ScrollBarX=148
+ScrollBarHeight=360
 SectionColor1=0.9, 0.0, 0.2, 1
 SectionColor2=0.6, 0.0, 0.4, 1
 SectionColor3=0.2, 0.1, 0.3, 1
